[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivus"
version = "0.4.0"
description = "A lightweight queue-based data pipeline framework for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "KKKKKKKEM" }]
keywords = ["pipeline", "queue", "concurrency", "data-processing", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/KKKKKKKEM/rivus"
Documentation = "https://github.com/KKKKKKKEM/rivus/tree/main/docs"
Repository = "https://github.com/KKKKKKKEM/rivus"
"Bug Tracker" = "https://github.com/KKKKKKKEM/rivus/issues"

[tool.hatch.build.targets.wheel]
packages = ["rivus"]

[tool.hatch.build.targets.sdist]
include = [
    "rivus/",
    "docs/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
